error.log
In file included from chip8.c:2:
chip8.h:1: error: unterminated #ifndef
    1 | #ifndef CHIP8
chip8.c: In function ‘initialize’:
chip8.c:5:9: error: implicit declaration of function ‘memset’ [-Wimplicit-function-declaration]
    5 |         memset(chip8->memory, 0, 4096);
      |         ^~~~~~
chip8.c:3:1: note: include ‘<string.h>’ or provide a declaration of ‘memset’
    2 | #include "chip8.h"
  +++ |+#include <string.h>
    3 | 
chip8.c:5:9: warning: incompatible implicit declaration of built-in function ‘memset’ [-Wbuiltin-declaration-mismatch]
    5 |         memset(chip8->memory, 0, 4096);
      |         ^~~~~~
chip8.c:5:9: note: include ‘<string.h>’ or provide a declaration of ‘memset’
chip8.c:12:47: error: ‘Chip8’ has no member named ‘stach’; did you mean ‘stack’?
   12 |         memset(chip8->stack, 0, sizeof(chip8->stach));
      |                                               ^~~~~
      |                                               stack
chip8.c: In function ‘loadGame’:
chip8.c:19:9: error: unknown type name ‘FILE’
   19 |         FILE* rom = fopen(filename, "rb");
      |         ^~~~
chip8.c:3:1: note: ‘FILE’ is defined in header ‘<stdio.h>’; this is probably fixable by adding ‘#include <stdio.h>’
    2 | #include "chip8.h"
  +++ |+#include <stdio.h>
    3 | 
chip8.c:19:21: error: implicit declaration of function ‘fopen’ [-Wimplicit-function-declaration]
   19 |         FILE* rom = fopen(filename, "rb");
      |                     ^~~~~
chip8.c:19:21: note: ‘fopen’ is defined in header ‘<stdio.h>’; this is probably fixable by adding ‘#include <stdio.h>’
chip8.c:19:21: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
chip8.c:21:20: error: ‘NULL’ undeclared (first use in this function)
   21 |         if (rom == NULL){
      |                    ^~~~
chip8.c:3:1: note: ‘NULL’ is defined in header ‘<stddef.h>’; this is probably fixable by adding ‘#include <stddef.h>’
    2 | #include "chip8.h"
  +++ |+#include <stddef.h>
    3 | 
chip8.c:21:20: note: each undeclared identifier is reported only once for each function it appears in
   21 |         if (rom == NULL){
      |                    ^~~~
chip8.c:22:17: error: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
   22 |                 printf("Failedd to open ROK\n");
      |                 ^~~~~~
chip8.c:22:17: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
chip8.c:22:17: warning: incompatible implicit declaration of built-in function ‘printf’ [-Wbuiltin-declaration-mismatch]
chip8.c:22:17: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
chip8.c:23:17: error: ‘retrun’ undeclared (first use in this function)
   23 |                 retrun 0;
      |                 ^~~~~~
chip8.c:23:23: error: expected ‘;’ before numeric constant
   23 |                 retrun 0;
      |                       ^~
      |                       ;
chip8.c:26:9: error: implicit declaration of function ‘fread’ [-Wimplicit-function-declaration]
   26 |         fread(&chip8->memory[0x200], 1, 3584, rom); // fread(start, 1, max, rom);
      |         ^~~~~
chip8.c:27:9: error: implicit declaration of function ‘fclose’ [-Wimplicit-function-declaration]
   27 |         fclose(rom);
      |         ^~~~~~
chip8.c: In function ‘emulationCycle’:
chip8.c:33:9: error: ‘chip8’ undeclared (first use in this function); did you mean ‘Chip8’?
   33 |         chip8->opcode = chip8->memory[chip8->pc] << 8 |chip8->memory[ chip8->pc + 1];
      |         ^~~~~
      |         Chip8
chip8.c:41:41: warning: incompatible implicit declaration of built-in function ‘memset’ [-Wbuiltin-declaration-mismatch]
   41 |                                         memset(ship8->gfx, 0, sizeof(chip8->gfx));
      |                                         ^~~~~~
chip8.c:41:41: note: include ‘<string.h>’ or provide a declaration of ‘memset’
chip8.c:41:48: error: ‘ship8’ undeclared (first use in this function); did you mean ‘Chip8’?
   41 |                                         memset(ship8->gfx, 0, sizeof(chip8->gfx));
      |                                                ^~~~~
      |                                                Chip8
chip8.c:46:44: error: expected ‘:’ or ‘...’ before ‘;’ token
   46 |                                 case 0x00EE; //Return from subroutine
      |                                            ^
chip8.c:52:41: warning: incompatible implicit declaration of built-in function ‘printf’ [-Wbuiltin-declaration-mismatch]
   52 |                                         printf("Unknown 0x0000 opcode: 0x%X\n", chip8->opcode);
      |                                         ^~~~~~
chip8.c:52:41: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
chip8.c: In function ‘main’:
chip8.c:75:19: error: ‘chip8’ undeclared (first use in this function); did you mean ‘Chip8’?
   75 |         loadGame(&chip8, "test1.ch8");
      |                   ^~~~~
      |                   Chip8
chip8.c:79:21: error: ‘chip’ undeclared (first use in this function)
   79 |                 if (chip.draw_flag){
      |                     ^~~~
chip8.c:83:9: error: expected declaration or statement at end of input
   83 |         }
      |
